--- a/src/Components/Acount/account.css
+++ b/src/Components/Acount/account.css
@@ -19,12 +19,12 @@ main > section > table {
   width: calc(100% - 40px);
 }
 
-table > tr > td {
+tbody > tr > td {
   padding: 10px;
   overflow: hidden;
 }
 
-table > tr > td:first-child {
+tbody > tr > td:first-child {
   text-align: center;
   color: rgb(148, 148, 148);
   width: 120px;
@@ -33,7 +33,7 @@ table > tr > td:first-child {
   /* border: red solid 3px; */
 /* } */
 
-table > tr > td:nth-child(2) {
+tbody > tr > td:nth-child(2) {
   text-align: left;
   text-transform: uppercase;
   padding-left: 20px;
@@ -44,12 +44,12 @@ table > tr > td:nth-child(2) {
   /* border: green solid 3px; */
 }
 
-table > tr > td:last-child {
+tbody > tr > td:last-child {
   text-align: right;
   min-width: 150px;
 }
 
-section > table > tr:nth-child(even) {
+table > tbody > tr:nth-child(even) {
   background-color: rgb(224, 224, 224);
 }
 main > section > button {
@@ -59,5 +59,26 @@ main > section > button {
 @media (max-width: 1060px) {
   section {
     margin: 0 20px 40px;
+  }
+}
+@media (max-width: 600px) {
+  main > section > div:first-child {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    font-size: 1em;
+  }
+  main > section > table {
+    font-size: 0.8em;
+  }
+  tbody > tr > td:first-child {
+    width: 60px;
+  }
+
+  tbody > tr > td:nth-child(2) {
+  }
+
+  tbody > tr > td:last-child {
+    min-width: 75px;
   }
 }
