--- a/src/Components/User/user.css
+++ b/src/Components/User/user.css
@@ -19,6 +19,11 @@ header > div > div:last-child > p:first-child {
 }
 @media (max-width: 600px) {
   header > div > div:last-child {
+    gap: 15px;
     flex-direction: row-reverse;
+  }
+  header > div > div:last-child > p:first-child {
+    letter-spacing: 1px;
+    font-size: 1em;
   }
 }
